--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header{
 .logo{
     border: 1px solid rgba(225, 255, 225, .075);
     width: auto;
-    border-radius: 15px;
+    border-radius: 50px;
     box-shadow: 0px 0px 10px #111;
     background-color: #222;
     padding:5px  7.5px ;
@@ -56,7 +56,7 @@ header{
 }
 .a2{
     padding:0px 7.5px 0px 7px;
-    font-size: 10px;
+    font-size: 12px;
 }
 .switch-continue{
     width: 100%;
@@ -93,6 +93,7 @@ h1{
     font-size: 3em;
     font-weight: bold;
     padding: 0px 15px;
+    
 }
 .main-entry .p{
     padding: 10px 20px 0px;
@@ -141,5 +142,8 @@ h1{
     }
     .switch-continue button{
         padding: 0px 7.5px;
+    }
+    .a2{
+        font-size: 10px;
     }
 }
